--- a/index.html
+++ b/index.html
@@ -425,13 +425,13 @@
       </tr>
       <tr>
         <td>1</td>
-        <td id="1"></td>
-        <td id="1s"></td>
+        <td id="1">lucky</td>
+        <td id="1s">lbjbll</td>
       </tr>
       <tr>
         <td>2</td>
-        <td id="2"></td>
-        <td id="2s"></td>
+        <td id="2">jnkk</td>
+        <td id="2s">klknlknl</td>
       </tr>
       <tr>
         <td>3</td>
