--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
   <body>
     <h1>Attendance</h1>
-    <form id="date" class="max">
+    <form class="max">
     </form>
     <h3 id="cout1"> counter</h3>
     <h3 id="cout2"> counter</h3>
@@ -254,12 +254,17 @@
       <p id="i" style='font-size:24px' class="fa">&#xf103;</p>
       <h5 id="r"></h5>
       <main>
-        <h1>Student list </h1>
+        <h1>Students list </h1>
         <table id="tableCompany">
+		<tr>
+			<td> Todays Date :</td>
+			<td id ="date"> </td>
+			
+		</tr>
           <tr>
             <td>roll.no</td>
-            <td>a</td>
-            <td>b</td>
+            <td>Absent student</td>
+            <td>Present student</td>
           </tr>
           <tr>
             <td>1</td>
