--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
     .box {
       padding: 20px 30px;
-      position: absolute;
-      right: 35%;
+      float:right;
       Font-size: 200%;
       background: #b9ffff;
       border-radius: 24px;
