--- a/index.html
+++ b/index.html
@@ -542,65 +542,72 @@
         var b = 0;
         var a = 0;
         var roll = 0;
-        var list = [".",
-          "Koli Amit Prakash",
-          "Gurram  Atharva S",
-          "Badole Sharan Gunderao",
-          "Bhosale Hrushikesh Sudhir",
-          "Patil  Bhuvaneshwari  C",
-          "Bingi Vaishnavi Giridhar",
-          "Dhage Vishal Baban ",
-          "Ganechari Yogesh M =",
-          "Gogi Kartik Amrutkumar",
-          "Gurunath Shrishail Sankae",
-          "Joshi Shravani Shirish",
-          "Kalburgi Mitali Vinayak",
-          "Kalekhan Rajahamad M  ",
-          "Konapure Aishwarya S",
-          "Konda Gayatri Sunil",
-          "Lohakare Ayush Harshad ",
-          " Mane Akshata Vishal..",
-          " Shaikh Afsheen.......",
-          " Shaikh Arsheen Rafique",
-          " Sonavane Manali Raju....",
-          " Swami Aishwarya Sanjay .",
-          " Topul Mamata Shriniwas. ",
-          " Umbarje Srushti C ......",
-          " Vhanhuve Parmeshwar D . ",
-          " Yangal Shruti Sudarshan.",
-          " Munale Onkar............",
-          " Innani Mayur............",
-          " Kulkarni Advait S.......",
-          " Kanaki Pramod ......... ",
-          " Kokane Yogesh ..........",
-          " Jadhav Sudarshan....... ",
-          " Shirsawade Aashay.......",
-          " Motagi Akshata V .......",
-          " Varkal Laxmikant S...",
-          " Karpekar Kajal D.....",
-          " Shivasharan Shivani R",
-          " Darna Ankita N.......",
-          " Waghmode Sugala D....",
-          " Chavan Amar .........",
-          " Loni Dhanshri M......",
-          " Dontul Durgaprasad L.",
-          " Durgam Netra A......... ",
-          " Chimman Mrunali N...... ",
-          " Gutuk Ishwar R......... ",
-          " Kundur Shital R........ ",
-          " Talikoti Sanket A.......",
-          " Gajjal Prasad N ........",
-          " Warda Sejal U...........",
-          " Shinde Onkar R ........ ",
-          " Phaltankar Mohit V..... ",
-          " Mittha Harish N.........",
-          " Bandgar Aniket S........",
-          " Mulinti Aishwarya S.... ",
-          " Sarwade Nilam R ........",
-          " Adam Tejashri A........ ",
-          " Gajeli Archana A........",
-          " Vitkar Rahul R..........",
-          " Sapar Prayag............"
+        var list = ["Batch I1:Koli Amit Prakash"
+,"Gurram Atharv Siddharth" 
+,"Badole Sharan Gunderao "
+,"Bhosale Hrushikesh Sudhir"
+,"Patil Bhuvaneshwari Chandrakant" 
+,"Bingi Vaishnavi Giridhar"
+,"Dhage Vishal Baban"
+,"Ganechari Yogesh Mahadev"
+,"Gogi Kartik Amrutkumar"
+,"Sanake Gurunath Shrishail"
+,"Joshi Shravani Shirish"
+,"Kalburgi Mitali Vinayak"
+,"Kalekhan Rajahmad Mahmadhanif"
+,"Konapure Aishwarya Sanjeev "
+,"Konda Gayatri Sunil"
+,"Lohakare Ayush Harshad"
+,"Mane Akshata Vishal"
+,"Shaikh Afsheen Kalandar"
+,"Shaikh Arsheen Rafique"
+,"Sonavane Manali Raju"
+,"Swami Aishwarya Sanjay"
+,"Topul Mamata Shrinivas"
+,"Umbarje Srushti Chanbasappa"
+,"Batch I2 :24 Vhanhuve Parmeshwar Doulappa" 
+,"Yangal Shruti Sudarshan"
+,"Munale Onkar Sanjay"
+,"Innani Mayur Manoj"
+,"Kulkarni Advait Sanjay"
+,"Kanki Pramod Arvind"
+,"Kokane Yogesh Shashikant"
+,"Jadhav Sudhrshan Vishwas" 
+,"Shirsawade Aashay Ajit "
+,"Motagi Akshata Vijay "
+,"Batch I2 :Varkal Laxmikant Somnath"
+," Karpekar Kajal Dharmendra"
+," Shivasharan  Shivani Ramesh "
+," Darna  Ankita Nagnath"
+," Waghmode Sugala Dhuludev "
+," Chavan Amar Shivaram "
+," Loni Dhanashri Mahesh "
+," Dontul Durgaprasad Laxminarayan "
+," Durgam Netra  Anand "
+," Chimman Mrunali Narasappa "
+," Guntuk Ishwar Ramesh "
+," Kundur Shital  Raju  "
+,"Batch I3 : Talikoti Sanket  Anil"  
+ ," Gajjal Prasad  Nagbhushan "
+ ," Warda Sejal Umesh "
+ ," Shinde Onkar Ramesh "
+ ," Phaltankar Mohit  Vinayak "
+ ," Mittha Harish Nagnath "
+ ," Bandgar Aniket Sadanand "
+ ," Mulinti Aishwarya Sreeniwas "
+ ," Sarwade Nilam Rahul "
+ ," Adam  Tejashri Ambadas "
+ ," Gajeli Archana Arvind "
+ ," Vitkar Rahul Ramesh "
+ ," Sapar Prayag Mahesh "
+ ," Kamble Rachana Raju "
+ ," Maniyar Md Zeeshan Md Irfan "
+ ," SakhareSourabh Sharad "
+ ," Shivankar Kautubh "
+ ," Sondekar Gayatri Mohanlal "
+ ," Chotave Dharmaraj "
+ ," Yermalkar Shardool "
+ " Vhanmane Komal "
         ];
         function clock() {
           var d = new Date();
