--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
 
       <!-- jQuery -->
       <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-      <script src="js/tableHTMLExport.js"></script>
+      <script src="tableHTMLExport.js"></script>
       <script>
         $(document).ready(function () {
 
