--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
     h1 {
-      width: 750px;
+      width: 500px;
       background: #46ffe8;
       padding: 30px 100px;
       text-align: left;
@@ -644,7 +644,7 @@
 
       <!-- jQuery -->
       <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-      <script src="js/tableHTMLExport.js"></script>
+      <script src="tableHTMLExport.js"></script>
       <script>
         $(document).ready(function () {
 
